fix safari expand animation overflow hidden

--- a/src/app/list_view/list_view.scss
+++ b/src/app/list_view/list_view.scss
@@ -86,6 +86,7 @@ mat-form-field {
   box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%),
     0px 1px 3px 0px rgb(0 0 0 / 12%);
   color: #2e4c6d;
+  overflow: hidden;
 }
 
 .filter-section {
